--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "cors": "^2.8.5",
     "lucide-react": "^0.562.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
