13012026 push Introduce Page and done UI Login/Register

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.16",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase": "^12.7.0",
     "lucide-react": "^0.562.0",
     "node-fetch": "^3.3.2",
     "react": "18.2.0",
