--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-router-dom": "^6.14.1",
+    "sweetalert2": "^11.26.17"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
