--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^12.7.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.562.0",
     "node-fetch": "^3.3.2",
     "react": "18.2.0",
